--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
+<!doctype>
 <html>
-<body>
-  <title>just test it</title>
-  <p><h1>lets start to creating Calculator app</h1></p>
-</body>
+  <head>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
+  <script src="./bundle.js"></script>
 </html>
